--- a/icofund.html
+++ b/icofund.html
@@ -27,16 +27,16 @@
 							<p>
 							The recent wave of blockchain crowd-funding initiatives have quickly set the stage for the best investment opportunities in the last few years.	Some IPOs and ICOs have raised tremendous amounts of money from investors who are not well educated in the art of investing though.</p>
 							<p>
-							It is for this reason that we set up a team of professional investors and have created the ETH denominated blockchain <rb_g>ICOFund</rb_g>. I myself am a UK qualified professional investor with over 13 years of international experience in the investment world. Here is a easy solution to diversified investmen in the Bitcoin and Ethereum startup space. The objective of this fund is not so much to support the ideologies and dreams of these startup organizations but to capitalize on what the market says are good investment opportunities. The objective is to maximize returns in two ways: buying tokens whose market value will increase, and selling them before the market turns; and to hold onto tokens which provide some sort of profit share or dividend.</p>
+							It is for this reason that we set up a team of professional investors and have created the ETH denominated blockchain <rb_g>ICOFund</rb_g>. The ICOFund is not a crowdsourcing initiative or a token sales, the ICOFund is a regulated investment vehicle into these initiatives. The fund works the same as a Mutual Fund or Unit Trust. I myself am a UK qualified professional investor with over 13 years of international experience in the investment world. Here is an easy solution to a diversified investment in the Bitcoin and Ethereum startup space. The objective of this fund is not to support the ideologies and dreams of these startup organizations but to capitalize on what the market says are good investment opportunities. The objective is to maximize returns in two ways: buying tokens whose market value will increase, and selling them before the market turns; and to hold onto tokens which provide some sort of profit share or dividend.</p>
 							<p>
-							The keys to low risk investing are <rb_g>research and experience</rb_g>. Due diligence, proper analysis of what's actually on offer, terms and conditions, and the actual legal structure of these initiative. These are but a few very important things to consider, and it seems like very few in the cryptocurrency community are taking these factors into consideration. Instead it seem that folks are willing to take bets on these because they view them as sound investments simply because of past performance alone.</p>
-
+							The keys to low risk investing are <rb_g>research and experience</rb_g>. Due diligence, proper analysis of what's actually on offer, terms and conditions, and the actual legal structures of these initiatives. These are but a few very important things to consider, and it seems like very few in the cryptocurrency community are taking these factors into consideration. Instead it seems like folks are willing to take risky bets on these because they view them as sound investments, simply because of past performance alone.</p>
+							
 							<b_g>Fund Data</b_g>
 							<p>
 							<table>
-								<tr><td>Valuation date</td><td>2016/11/28</td></tr>
-								<tr><td>Units Outstanding</td><td>5,326.91</td></tr>
-								<tr><td>Unit Value</td><td>1.37 ETH</td></tr>
+								<tr><td>Valuation date</td><td>2016/11/29</td></tr>
+								<tr><td>Units Outstanding</td><td>5,456.91</td></tr>
+								<tr><td>Unit Value</td><td>1.42 ETH</td></tr>
 								<tr><td>Fund Inception</td><td>2016/10/19</td></tr>
 								<tr><td>Annualized return (since inception)</td><td>53.2%</td></tr>
 								<tr><td>Fund Manager</td><td>Ryan Francois Venter</td></tr>
@@ -45,24 +45,23 @@
 
 							<b_g>To buy ICOFund token units</b_g>
 							<p>
-							The fund works in the same as a Mutual Fund or Unit Trust.<br>
-							Investors deposits ETH into address <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g> (minimum 1 ETH).<br>
-							We convert ETH into units (shares) of the fund and purchase equal amounts of ICO tokens and other stocks according to the fund allocation that makes up the fund.<br>
+							Investors simply deposits ETH into address <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g> (minimum 2 ETH).<br>
+							We convert ETH into units (shares) of the fund and purchase equal amounts of ICO tokens and other stocks according to the fund allocation that makes up the ICOfund.<br>
 							We create new ICOFund tokens according to your share in the fund and allocate them to your Ethereum address.</p>
 
 							<b_g>To sell ICOFund token units</b_g>
 							<p>
 							Send your ICOFund tokens back to <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g>.<br>
-							We sell the corresponding amount of fund allocation tokens and stocks that make up the fund for ETH.<br>
+							We sell the corresponding amount of fund allocation tokens that make up the fund at market value for ETH.<br>
 							We send your ETH back to your Ethereum address.</p>
 
 							<b_g>Principles</b_g>
 							<p>
 							<rb_g>Don't be greedy:</rb_g> Take profit before the market turns.<br>
-							<rb_g>Early Bird catches the worm:</rb_g> Do proper research and due diligence then buy when it's fresh and cheap.<br>
-							<rb_g>Don't put all your eggs in one basket:</rb_g> Diversify by spiting the fund into several ICO offerings.<br>
+							<rb_g>Early Bird catches the worm:</rb_g> Do proper research and due diligence, then buy when it's fresh and cheap.<br>
+							<rb_g>Don't put all your eggs in one basket:</rb_g> Diversify by spliting the fund into several ICO offerings.<br>
 							<rb_g>Practice what you preach:</rb_g> Any profit that the fund accumulates is kept in the fund as shares. In other words we invest all of profits in the same funds and stocks that we give you.<br>
-							<rb_g>Don't judge a book by its cover:</rb_g> Spend as little effort as possible on cosmetics and focus on the substance, which is to make as much profit as possible.</p>
+							<rb_g>Don't judge a book by its cover:</rb_g> Spend as little effort and resources as possible on cosmetics and marketing and focus on the substance, which is to make as much profit as possible.</p>
 
 							<b_g>Fees</b_g>
 							<p>
@@ -74,7 +73,7 @@
 
 							<b_g>Legal Disclaimer</b_g>
 							<p>
-							All investments carry an element of risk and by investing in the ICOFund you accept these risks. We will not be held responsible for any loss due to market movements or for any other reason out of our control. Buying or selling units may take up to 24 hours to process. The profit accumulation is valid for a 12 month period after which ICOFund may sell profit units to pay for ongoing research and expenses associated with running the fund. We publish daily values of the fund and the holdings data at the end of each calendar month (so that others can't simply copy us).</p>
+							All investments carry an element of risk and by investing in the ICOFund you accept these risks. We will not be held responsible for any loss due to market movements or for any other reason out of our control. Buying or selling units may take up to 24 hours to process. Some newer tokens may not have a sufficient market yet and we'll only sell them when we can at market value. The profit accumulation is valid for a 12 month period after which ICOFund may sell profit units to pay for ongoing research and expenses associated with running the fund. We publish daily values of the fund and the holdings data at the end of each calendar month (so that others can't copy our investment formula).</p>
 						</rn_d>	
 					</td>
 				</tr>
