--- a/icofund.html
+++ b/icofund.html
@@ -58,7 +58,7 @@
 							<b_g>Principles</b_g>
 							<p>
 							<rb_g>Don't be greedy:</rb_g> Take profit before the market turns.<br>
-							<rb_g>Early Bird catches the worm:</rb_g> Do proper research and due diligence, then buy when it's fresh and cheap.<br>
+							<rb_g>Early bird catches the worm:</rb_g> Do proper research and due diligence, then buy when it's fresh and cheap.<br>
 							<rb_g>Don't put all your eggs in one basket:</rb_g> Diversify by spliting the fund into several ICO offerings.<br>
 							<rb_g>Practice what you preach:</rb_g> Any profit that the fund accumulates is kept in the fund as shares. In other words we invest all of profits in the same funds and stocks that we give you.<br>
 							<rb_g>Don't judge a book by its cover:</rb_g> Spend as little effort and resources as possible on cosmetics and marketing and focus on the substance, which is to make as much profit as possible.</p>
@@ -66,9 +66,9 @@
 							<b_g>Fees</b_g>
 							<p>
 							<table>
-								<tr><td>Exit fee</td><td>3% (one time)</td></tr>
-								<tr><td>Administration fee</td><td>3% (per anum)</td></tr>
-								<tr><td>Performance fee</td><td>30% on any performance above 30% pa (if the fund performed at a growth rate of 50% pa then we will charge 30% * (50% - 30%) = 6%)</td></tr>
+								<tr><td>Exit:</td><td>3% (one time)</td></tr>
+								<tr><td>Administration:</td><td>3% (per anum)</td></tr>
+								<tr><td>Performance:</td><td>30% on any performance above 30% pa (if the fund performed at a growth rate of 50% pa then we will charge 30% * (50% - 30%) = 6%)</td></tr>
 							</table></p>
 
 							<b_g>Legal Disclaimer</b_g>
