--- a/icofund.html
+++ b/icofund.html
@@ -4,8 +4,7 @@
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 	<title>The ICOFund</title>
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
-
-	</script>
+	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-85064523-2', 'auto');ga('send', 'pageview');</script>
 </head>
 <body bgcolor="#EEEEEE">
 	<div id="tableContainer-1">
