--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			logo_image.src = 'images/ZZYP/' + zzyp_selected;
 		}
 	</script>
+	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-85064523-2', 'auto');ga('send', 'pageview');</script>
 </head>
 <body id="body_background" background="" bgcolor="black" onload="starter();">
 	<div id="tableContainer-1">
