--- a/programming.html
+++ b/programming.html
@@ -16,8 +16,8 @@
 			var body_background = document.getElementById('body_background');
 			body_background.background = 'images/backgrounds/' + background_name;		
 		}
-
 	</script>
+	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-85064523-2', 'auto');ga('send', 'pageview');</script>
 </head>
 <body id="body_background" onload="starter();">
 	<div id="tableContainer-1">
