--- a/programming.html
+++ b/programming.html
@@ -44,33 +44,34 @@
 						<p>
 						I have both practical (technical) and theory (insight). I have a substantial knowledge of computation theory, computation complexity and the history and evolution of computers as we know it, and where the computing industry is heading into the future.</p></rn_d>
 						<p>
-						<a href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Profile (Resume/CV)</a></p>
+						<a href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Resume | CV</a></p>
 						<h_2>KEY TECHNOLOGIES</h_2>
 						<p>
 						<b_r>python 3.5/2.7, cython, cv2, pil, openpyxl, wxpython, tkinter, numpy, scipy, pandas, matplotlib, ipython, sql, sqlalchemy, mysql, postgresql, sqlite, json, json-rpc, xml, excel, csv, regular expression, pdftotext, git, github, heroko, amazon, fintech, bitcoin, ethereum, solidity, linux, windows, macos</b_r></p>
-						<img src="images/logos/python.png" style="border: none;" width="191">
-						<img src="images/logos/numpy.png" style="border: none;" width="191">
-						<img src="images/logos/scipy.png" style="border: none;" width="191">
-						<img src="images/logos/pandas.png" style="border: none;" width="239">
-						<img src="images/logos/matplotlib.png" style="border: none;" width="191">
-						<img src="images/logos/ipython.png" style="border: none;" width="171">
-						<img src="images/logos/sqlalchemy.png" style="border: none;" width="191">
-						<img src="images/logos/mysql.png" style="border: none;" width="191">
-						<img src="images/logos/postgresql.png" style="border: none;" width="191">
-						<img src="images/logos/sqlite.png" style="border: none;" width="191">
-						<img src="images/logos/json.png" style="border: none;" width="191">
-						<img src="images/logos/xml.png" style="border: none;" width="191">
-						<img src="images/logos/excel.png" style="border: none;" width="191">
-						<img src="images/logos/csv.png" style="border: none;" width="151">
-						<img src="images/logos/regex.png" style="border: none;" width="151">
-						<img src="images/logos/github.png" style="border: none;" width="191">
-						<img src="images/logos/heroku.png" style="border: none;" width="191">
-						<img src="images/logos/bitcoin.png" style="border: none;" width="191">
-						<img src="images/logos/ethereum.png" style="border: none;" width="191">
-						<img src="images/logos/solidity.png" style="border: none;" width="191">
-						<img src="images/logos/linux.png" style="border: none;" width="191">
-						<img src="images/logos/windows.png" style="border: none;" width="191">
-						<img src="images/logos/macos.png" style="border: none;" width="191">
+						<img src="images/logos/python.png" style="border: none;" width="151">
+						<img src="images/logos/numpy.png" style="border: none;" width="151">
+						<img src="images/logos/scipy.png" style="border: none;" width="151">
+						<img src="images/logos/pandas.png" style="border: none;" width="199">
+						<img src="images/logos/matplotlib.png" style="border: none;" width="151">
+						<img src="images/logos/beautifulsoup.png" style="border: none;" width="151">
+						<img src="images/logos/ipython.png" style="border: none;" width="131">
+						<img src="images/logos/sqlalchemy.png" style="border: none;" width="151">
+						<img src="images/logos/mysql.png" style="border: none;" width="151">
+						<img src="images/logos/postgresql.png" style="border: none;" width="151">
+						<img src="images/logos/sqlite.png" style="border: none;" width="151">
+						<img src="images/logos/json.png" style="border: none;" width="151">
+						<img src="images/logos/xml.png" style="border: none;" width="151">
+						<img src="images/logos/excel.png" style="border: none;" width="151">
+						<img src="images/logos/csv.png" style="border: none;" width="127">
+						<img src="images/logos/regex.png" style="border: none;" width="127">
+						<img src="images/logos/github.png" style="border: none;" width="151">
+						<img src="images/logos/heroku.png" style="border: none;" width="151">
+						<img src="images/logos/bitcoin.png" style="border: none;" width="151">
+						<img src="images/logos/ethereum.png" style="border: none;" width="151">
+						<img src="images/logos/solidity.png" style="border: none;" width="151">
+						<img src="images/logos/linux.png" style="border: none;" width="151">
+						<img src="images/logos/windows.png" style="border: none;" width="151">
+						<img src="images/logos/macos.png" style="border: none;" width="127">
 					</td>
 				</tr>
 			</table>
