more info on crowdsourcing

--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
 <head>
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-	<title>About me</title>
+	<title>Crowdsourcing Services</title>
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
 		var backgrounds = ["b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.png", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BGAlien.jpg", "BGDark.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.png", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
@@ -40,9 +40,35 @@
 							<p>
 							These two organizations have reached substantial investments, which will enable them to achieve their objectives and to become good investments for their respective investors. Augur raised over $5.2 million and Golem raised over $8 million.</p>
 							<p>
-							Because I am an active blogger in this space I have been able to provide a very valuable service for these organizations. I was active in promoting the sale of tokens and dealing with any objections and doubters. As a Financial Advisor for the past 9 years I fully understand the landscape of these ventures. I also learned a lot from their founders and have build valuable connection in the process.</p>
-							<p>I don't want to say any more and expose my secret sauce, but I am currently looking forward to the next ICO.</p>
-							<p>As mentioned before I am also an actively paid blogger in the blockchain tech space. I have helped contribute to several books (authors using my content for their publications).
+							Because I am an active blogger in the Ethereum world, I have been able to provide a valuable service to these organizations. I was active in promoting the sale of tokens and dealing with any objections and doubters. As a Financial Advisor for the past 9 years I fully understand the landscape of these ventures. I also learned a lot from their founders and have build valuable connection in the process.</p>
+							<b_d>Services</b_d>
+							<p>
+								<ul>
+									<li>Facebook sharing and group page creation and sharing</li>
+									<li>Twitter sharing, tweets and retweets</li>
+									<li>Slack sub-channel engagement</li>
+									<li>IRC channels engagement</li>
+									<li>Reddit/Ethereum engagement and monitoring</li>
+									<li>Reddit/ETHtrader engagement and monitoring</li>
+									<li>Reddit/AMA engagement and monitoring</li>
+									<li>Medium articles creation, posting and commenting</li>
+									<li>Youtube content creation and posting</li>
+									<li>Google+ sharing</li>
+									<li>Article creation, posting and commenting on:</li>
+										<ul>
+											<li>Ethereum.org forums</li>
+											<li>Bitcointalk</li>
+											<li>Blockchain News</li>
+											<li>Steemit</li>
+											<li>Ethnews</li>
+											<li>NewsBTC</li>
+											<li>Bitcoinist</li>
+											<li>Econotimes</li>
+											<li>Cointelegraph</li>
+											<li>Coindesk and the-blockchain</li>
+										</ul>
+								</ul>
+							</p>
 						</rn_d>
 						
 					</td>
