--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
 <head>
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-	<title>About me</title>
+	<title>Ryan Francois Venter</title>
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
 		var backgrounds = ["b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.png", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BGAlien.jpg", "BGDark.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.png", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
@@ -68,9 +68,9 @@
 								<p>
 								I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios for wealthy investors in the Middle East and London.</p>
 								<p>
-								I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python and I am currently studying Clojure and the Java virtual machine.</p>
+								I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python, have developed several smart contracts with Solidity, and I am  studying Clojure.</p>
 								<p>
-								I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates.</p>
+								I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance.</p>
 								<p>
 								By combining these two fields I am also actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a paid blogger, as well as part of a consortium exploring business opportunities in this space.</p>
 								<p>
