more about FinTech

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 								<p>
 								I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance.</p>
 								<p>
-								By combining these two fields I am also actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a paid blogger, as well as part of a consortium exploring business opportunities in this space.</p>
+								By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, managing the ICOFund, creating smart contracts, as well as part of a consortium exploring business opportunities in this space.</p>
+
 								<p>
 								You may notice from my website, I don't use templates. Everything that I do is uniquely crafted and tailored specifically for each client and each task.<br>
 								My problem solving skills are out-of-the-box, and my life motto is to <b_b>add value in whatever I do.</b_b></p>
