--- a/index.html
+++ b/index.html
@@ -43,75 +43,68 @@
 			background: rgba(0, 0, 0, 0.7);
 			cellspacing="0"
 			width="75%">
-				<tr valign="top">
-					<td align="left">
-						<img id="RFV_logo" src="" style="border: none;" onclick="logo_change();"/><br>
+				<tr valign="top" style="height:37px;">
+					<td style="width:199px"><img id="RFV_logo" src="" style="border: none;" onclick="logo_change();"/></td>
+					<td><img src="images/profile_pic.jpg" style="border: none;"/></td>
+				</tr>
+				<tr valign="top" style="height:37px;">
+					<td style="width:199px"><h_2>NAME</h_2></td>
+					<td><n_l>Ryan Francois Venter</n_l></td>
+				</tr>
+				<tr valign="top" style="height:37px;">
+					<td><h_2>CONTACT</h_2></td>
+					<td>
+						<a href="mailto:msg@rfv.io">msg@rfv.io</a><br>
+						<a href="skype:riaan.francois.venter?call">Skype</a>
 					</td>
 				</tr>
-				<tr>
-					<td colspan="2">
-						<table border="0" cellspacing="0">
-							<tr valign="top" style="height:37px;">
-								<td style="width:199px"><h_2>NAME</h_2></td>
-								<td><n_l>Ryan Francois Venter</n_l></td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><h_2>CONTACT</h_2></td>
-								<td>
-									<a href="mailto:msg@rfv.io">msg@rfv.io</a><br>
-									<a href="skype:riaan.francois.venter?call">Skype</a>
-								</td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><h_2>ABOUT</h_2></td>
-								<td><rn_l>
-								<p>
-								I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios for wealthy investors in the Middle East and London.</p>
-								<p>
-								I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python, have developed several smart contracts with Solidity, and I am  studying Clojure.</p>
-								<p>
-								I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance.</p>
-								<p>
-								By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, managing the ICOFund, creating smart contracts, as well as part of a consortium exploring business opportunities in this space.</p>
+				<tr valign="top" style="height:37px;">
+					<td><h_2>ABOUT</h_2></td>
+					<td><rn_l>
+					<p>
+					I stand at the crossroad of Finance and Computation, doing few distinct tasks, very well. These two fields blend well together and they are my passion. In the past 13 years, I have written a number of software solutions for leading companies and I have also managed substantially large portfolios for wealthy investors in the Middle East and London.</p>
+					<p>
+					I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python, have developed several smart contracts with Solidity, and I am  studying Clojure.</p>
+					<p>
+					I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance.</p>
+					<p>
+					By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, managing the ICOFund, creating smart contracts, as well as part of a consortium exploring business opportunities in this space.</p>
 
-								<p>
-								You may notice from my website, I don't use templates. Everything that I do is uniquely crafted and tailored specifically for each client and each task.<br>
-								My problem solving skills are out-of-the-box, and my life motto is to <b_b>add value in whatever I do.</b_b></p>
-								<p>
-								Apart from work: I am a family man. I do exercise daily and eat very healthily. I do not drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
-								<p>
-								<b_l>Key personality traits:</b_l> <b_y>enthusiastic, intelligent, productive, proficient, professional</b_y></p>
-								<p>
-								Allow me to show you how I can help you.</p>
-								<p>
-								 <a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.wealthtrainer.co">Financial Advice</a><a class="button" href="icofund.html">ICOFund</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><h_2>PROFILES</h_2></td>
-								<td>
-									<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br>
-									<a href="https://talent.hubstaff.com/profiles/ryan-f-venter" target="_blank">Hubstaff</a><br>
-									<a href="https://www.upwork.com/fl/riaanventer" target="_blank">Upwork</a><br>
-									<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
-									<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
-									<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
-									<a href="https://trello.com/rfventer">Trello</a><br>
-									<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a><br>
-									<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
-									<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
-									
-								</td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><h_2>TIME ZONE</h_2></td>
-								<td><rn_l>Perth UTC + 8</rn_l></td>
-							</tr>
-							<tr valign="top" style="height:37px;">
-								<td><h_2>LOCATION</h_2></td>
-								<td><rn_l>Australasia, depending on my clients</rn_l></td>
-							</tr>
-						</table>
+					<p>
+					You may notice from my website, I don't use templates. Everything that I do is uniquely crafted and tailored specifically for each client and each task.<br>
+					My problem solving skills are out-of-the-box, and my life motto is to <b_b>add value in whatever I do.</b_b></p>
+					<p>
+					Apart from work: I am a family man. I do exercise daily and eat very healthily. I do not drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
+					<p>
+					<b_l>Key personality traits:</b_l> <b_y>enthusiastic, intelligent, productive, proficient, professional</b_y></p>
+					<p>
+					Allow me to show you how I can help you.</p>
+					<p>
+					 <a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.wealthtrainer.co">Financial Advice</a><a class="button" href="icofund.html">ICOFund</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
+				</tr>
+				<tr valign="top" style="height:37px;">
+					<td><h_2>PROFILES</h_2></td>
+					<td>
+						<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br>
+						<a href="https://talent.hubstaff.com/profiles/ryan-f-venter" target="_blank">Hubstaff</a><br>
+						<a href="https://www.upwork.com/fl/riaanventer" target="_blank">Upwork</a><br>
+						<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
+						<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
+						<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
+						<a href="https://trello.com/rfventer">Trello</a><br>
+						<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a><br>
+						<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
+						<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
+						
 					</td>
+				</tr>
+				<tr valign="top" style="height:37px;">
+					<td><h_2>TIME ZONE</h_2></td>
+					<td><rn_l>Perth UTC + 8</rn_l></td>
+				</tr>
+				<tr valign="top" style="height:37px;">
+					<td><h_2>LOCATION</h_2></td>
+					<td><rn_l>Australasia, depending on my clients</rn_l></td>
 				</tr>
 			</table>
 		</div>
