--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -36,9 +36,9 @@
 						<h_1>FINTECH CROWDSOURCING</h_1>
 						<rn_d>
 							<p>
-							I have recently been intimately involved with the fund-raising initiatives of <a href="https://www.augur.net"><img src="images/logos/augur.png" style="border: none;" width="100" /></a> as well as <a href="https://golem.network"><img src="images/logos/golem.png" style="border: none;" width="100"/></a></p>
+							I have recently been intimately involved with the fund-raising initiatives of <a href="https://www.augur.net"><img src="images/logos/augur.png" style="border: none;" width="100" /></a></p>
 							<p>
-							These two organizations have reached substantial investments, which will enable them to achieve their objectives and to become good investments for their respective investors. Augur raised over $5.2 million and Golem raised over $8 million.</p>
+							They have reached substantial investments and raised over $5.2 million, which will enable them to achieve their objectives and to become good investments for their respective investors.</p>
 							<p>
 							Because I am an active blogger in the Ethereum world, I have been able to provide a valuable service to these organizations. I was active in promoting the sale of tokens and dealing with any objections and doubters. As a Financial Advisor for the past 9 years I fully understand the landscape of these ventures. I also learned a lot from their founders and have build valuable connection in the process.</p>
 							<b_d>Services</b_d>
