--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -60,6 +60,7 @@
 											<li>Bitcointalk</li>
 											<li>Blockchain News</li>
 											<li>Steemit</li>
+											<li>Adbit</li>
 											<li>Ethnews</li>
 											<li>NewsBTC</li>
 											<li>Bitcoinist</li>
