--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 			width="75%">
 				<tr valign="top" style="height:37px;">
 					<td style="width:199px"><img id="RFV_logo" src="" style="border: none;" onclick="logo_change();"/></td>
-					<td><img src="images/profile_pic.jpg" style="border: none;"/></td>
+					<td><img src="images/profile_pic.jpg" style="border:2px solid white"/></td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td style="width:199px"><h_2>NAME</h_2></td>
-					<td><n_l>Ryan Francois Venter</n_l></td>
+					<td><b_l>Ryan Francois Venter</b_l></td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>CONTACT</h_2></td>
