--- a/icofund.html
+++ b/icofund.html
@@ -19,7 +19,10 @@
 			width="70%">
 				<tr valign="top">
 					<td align="left">
-						<img src="images/icofund.png" style="border: none;"/>  Run by <a href="http://www.rfv.io"><img src="images/RFV_grey_line_inv.png" width="200px" style="border: none;"/></a><br>
+						<img src="images/icofund.png" style="border: none;"/>  <n>Managed by </n><a href="http://www.rfv.io"><img src="images/RFV_grey_line_inv.png" width="200px" style="border: none;"/></a><br><br><br>
+						<n_d>Send Ether to</n_d><br><br>
+						<b_g>0xC2a70705e3511cFAbde320bc2043faDD6ceB6b94</b_g><br><br>
+						<n_d>Your ether will be invested in the fund's underlying portfolio. You will receive <b_g>ICO</b_g><b>Fund</b> tokens within 24 hours.</n_d><br><br>
 						<h_2>BLOCKCHAIN INVESTMENT FUND</h_2><br><br>
 						<b_d>Blockchain Investment Fund Objectives</b_d><br>
 						<rn_d>
@@ -41,24 +44,26 @@
 							<b_d>Fund Data</b_d>
 							<p>
 							<table>
-								<tr><td>Valuation date</td><td>2016/12/10</td></tr>
-								<tr><td>Units Outstanding</td><td>5,556.91</td></tr>
-								<tr><td>Unit Value</td><td>1.51 ETH</td></tr>
+								<tr><td>Valuation date</td><td>2016/12/21</td></tr>
+								<tr><td>Units Outstanding</td><td>5,546.91</td></tr>
+								<tr><td>Unit Value</td><td>1.41 ETH</td></tr>
 								<tr><td>Fund Inception</td><td>2016/10/19</td></tr>
 								<tr><td>Annualized return (since inception)</td><td>53.2%</td></tr>
 								<tr><td>Fund Manager</td><td>Ryan Francois Venter</td></tr>
 								<tr><td>Contact</td><td><a href="http://www.wealthtrainer.co">wealthtrainer.co</a></td></tr>
+								<tr><td>Smart Contract details</td><td><a href="https://etherscan.io/address/0xc2a70705e3511cfabde320bc2043fadd6ceb6b94">0xc2a70705e3511cfabde320bc2043fadd6ceb6b94</a></td></tr>
+								<tr><td>Smart Contract source</td><td><a href="https://github.com/RFVenter/icofund/blob/master/icofund.sol">icofund.sol</a></td></tr>
 							</table></p>
 
 							<b_d>To buy <b_g>ICO</b_g><b>Fund</b> token units</b_d>
 							<p>
-							Investors simply deposits ETH into address <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g> (minimum 2 ETH).<br>
+							Investors simply deposits ETH into address <rb_g>0xC2a70705e3511cFAbde320bc2043faDD6ceB6b94</rb_g> (minimum 2 ETH).<br>
 							We convert ETH into units (shares) of the fund and purchase equal amounts of ICO tokens and other stocks according to the fund allocation that makes up the <rb_g>ICO</rb_g><rb>Fund</rb>.<br>
 							We create new <rb_g>ICO</rb_g><rb>Fund</rb> tokens according to your share in the fund and allocate them to your Ethereum address.</p>
 
 							<b_d>To sell <b_g>ICO</b_g><b>Fund</b> token units</b_d>
 							<p>
-							Send your <rb_g>ICO</rb_g><rb>Fund</rb> tokens back to <rb_g>0xA813e13d85D61c36D2fEc4621Ce85B5DDE9e83DF</rb_g>.<br>
+							Send your <rb_g>ICO</rb_g><rb>Fund</rb> tokens back to <rb_g>0xC2a70705e3511cFAbde320bc2043faDD6ceB6b94</rb_g>.<br>
 							We sell the corresponding amount of fund allocation tokens that make up the fund at market value for ETH.<br>
 							We send your ETH back to your Ethereum address.</p>
 
