--- a/icofund.html
+++ b/icofund.html
@@ -59,7 +59,8 @@
 							<p>
 							Investors simply deposits ETH into address <rb_g>0xC2a70705e3511cFAbde320bc2043faDD6ceB6b94</rb_g> (minimum 2 ETH).<br>
 							We convert ETH into units (shares) of the fund and purchase equal amounts of ICO tokens and other stocks according to the fund allocation that makes up the <rb_g>ICO</rb_g><rb>Fund</rb>.<br>
-							We create new <rb_g>ICO</rb_g><rb>Fund</rb> tokens according to your share in the fund and allocate them to your Ethereum address.</p>
+							We create new <rb_g>ICO</rb_g><rb>Fund</rb> tokens according to your share in the fund and allocate them to your Ethereum address.<br>
+							You may use <a href="https://www.myetherwallet.com/#send-transaction">myetherwallet</a>.</p>
 
 							<b_d>To sell <b_g>ICO</b_g><b>Fund</b> token units</b_d>
 							<p>
