--- a/programming.html
+++ b/programming.html
@@ -69,6 +69,7 @@
 						<img src="images/logos/bitcoin.png" style="border: none;" width="151">
 						<img src="images/logos/ethereum.png" style="border: none;" width="151">
 						<img src="images/logos/solidity.png" style="border: none;" width="151">
+						<img src="images/logos/truffle.png" style="border: none;" width="151">
 						<img src="images/logos/linux.png" style="border: none;" width="151">
 						<img src="images/logos/windows.png" style="border: none;" width="151">
 						<img src="images/logos/macos.png" style="border: none;" width="127">
