--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -26,13 +26,17 @@
 			text-align: left;
 			margin-left: auto;
 			margin-right: auto;
-			padding: 13px;
-			background: white;
+			padding: 0px;
+			background: white;"
+			border="0"
 			cellspacing="0"
 			width="70%">
-				<tr valign="top">
+				<tr valign="bottom" height="79" bgcolor="#000">
 					<td align="left">
-						<a href="http://www.rfv.io"><img id="RFV_logo" src="" style="border: none;" /></a><br>
+						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a>
+					</td>
+				<tr valign="top">
+					<td align="left" style="padding-left: 32px; padding-right: 32px">
 						<h_1>FINTECH CROWDSOURCING</h_1>
 						<rn_d>
 							<p>
