--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -31,8 +31,8 @@
 			border="0"
 			cellspacing="0"
 			width="70%">
-				<tr valign="bottom" height="79" bgcolor="#333">
-					<td align="left">
+				<tr valign="bottom" height="79" class="sign">
+					<td align="left" style="padding-left: 7px;">
 						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a>
 					</td>
 				<tr valign="top">
