--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -42,8 +42,10 @@
 							<p>
 							I have recently been intimately involved with the fund-raising initiatives of <a href="https://www.augur.net"><img src="images/logos/augur.png" style="border: none;" width="100" /></a></p>
 							<p>
-							They have reached substantial investments and raised over $5.2 million, which will enable them to achieve their objectives and to become good investments for their respective investors.</p>
+							We reached substantial investments and raised over $5.2 million, which will enable them to achieve their objectives and to become good investments for their respective investors.</p>
 							<p>
+							Then I joined the team from <a href="https://www.golem.network"><img src="images/logos/golem.png" style="border: none;" width="100" /></a></p>
+							<p>We quickly reached our target within the 1st week and we all know the rest of the story. Golem is now on the way to producing truly amazing decentralized tech, and investors can expect good returns.</p>
 							Because I am an active blogger in the Ethereum world, I have been able to provide a valuable service to these organizations. I was active in promoting the sale of tokens and dealing with any objections and doubters. As a Financial Advisor for the past 9 years I fully understand the landscape of these ventures. I also learned a lot from their founders and have build valuable connection in the process.</p>
 							<b_d>Services</b_d>
 							<p>
